[java] Use Java Map instead of Guava Immutable Map in BiDi package